--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/test.jsx"></script>
+    <script type="module" src="C:\Users\efimo\PycharmProjects\FixRemont\frontend\src\test.jsx"></script>
   </body>
 </html>
